# OpenGL-learn-

./: CMakeLists.txt
Libs/glad/: CMakeLists.txt
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt  main.cpp
Source/App/Game/: Game.cpp  Game.h
Source/App/Managers/: ShaderManager.cpp  ShaderManager.h
Source/App/Singleton/: ISingleton.cpp  ISingleton.h
Source/App/Windows/: MainWindow.cpp  MainWindow.h
assets/shaders/: main.frag  main.vert
